smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-missing-after-namespace.smithy
// Parse error at line 4, column 11 near `invalid#`: Invalid shape ID: invalid#
$version: "0.1.0"

use shape invalid#
